WinCC_OA_Test/TestSuites/suite_CtrlppCheck/sub_app/scripts/testScripts/syntaxErrors/missingBracket_02.ctl
// start options:
// error id: syntaxError
// Unmatched }

void main()

  int i = 0;
  i++;
}